# togglebit-rust-api-stuff

./: Cargo.toml  README.md
migrations/: 20240528223603_users.sql  20240529093712_workspaces.sql  20240530191226_invitations.sql  20240530193000_members.sql  20240608095434_workspace_details.sql  20240612235723_password_reset_requests.sql  20240812124018_verified-emails.sql  20240816105008_verified-domains.sql
src/: main.rs
src/darkscout/: mod.rs
src/darkscout/adapters/: mod.rs
src/darkscout/adapters/ds_darkengine/: api.rs  mod.rs  types.rs
src/darkscout/adapters/dsbreach/: mod.rs
src/darkscout/adapters/smtp_mailer/: mod.rs
src/darkscout/cache/: mod.rs
src/darkscout/database/: auth.rs  invitations.rs  members.rs  mod.rs  users.rs  verified_domains.rs  verified_emails.rs  workspaces.rs
src/darkscout/handlers/: auth.rs  members.rs  mod.rs  users.rs  verified_domains.rs  verified_emails.rs  workspaces.rs
src/darkscout/handlers/dark_monitor/: mod.rs
src/darkscout/types/: auth.rs  darkmonitor.rs  errors.rs  invitations.rs  member.rs  mod.rs  store.rs  user.rs  verified_domains.rs  verified_emails.rs  workspace.rs
src/darkscout/utils/: auth.rs  countries.rs  jwt.rs  macros.rs  mod.rs
src/darkscout/utils/middlewares/: jwt_auth.rs
src/darkscout/web/: mod.rs
src/webapi/: mod.rs
src/webapi/config/: development.toml  production.toml
