[package]
name = "rsbackend"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = "1.37.0"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
chrono = { version = "0.4.38", features = ["serde"] }
moka = { version = "0.12.8", features = ["future"]}
sqlx = { version = "0.7.4", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "macros",
    "uuid",
] }
bcrypt = "0.15"
validator = { version = "0.18.1", features = ["derive"] }
async-trait = "0.1.80"
uuid = { version = "1.8.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
toml = "0.8.13"
reqwest = { version = "0.12", features = ["json"] }
http-cache-reqwest = "0.14.0"
reqwest-middleware = "0.3.1"
jsonwebtoken = "9.3.0"
lettre = "0.11.7"
rand = "0.8.5"
http = "1.1.0"
mongodb = "3.0.1"
